[package]
name = "socks_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = "s"  # optimize for size
lto = true       # Link-Time Optimization
codegen-units = 1 # reduce parallel code generation units
panic = "abort"  # smallest panic strategy
strip = true     # strip debug symbols
